# ASN-Incidents

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
app_streamlit/: NuclearIncidentsUI.bat  NuclearIncidentsUI.py
data/: data_nuclear_incidents.xlsx  data_nuclear_incidents_with_chunks.xlsx  data_nuclear_incidents_with_summaries.xlsx  data_nuclear_incidents_with_titles.xlsx  data_nuclear_incidents_with_titles_topics.xlsx  entities.xlsx  entities_with_topics.xlsx  mwe.xlsx
data/label-explorer/: environment.yml  pyproject.toml
data/label-explorer/data/: data.xlsx  data_labels.xlsx
data/label-explorer/notebooks/: Nuclear Incidents - 1. Docx parsing.ipynb  Nuclear Incidents - 2. Topic modeling - Title-level.ipynb  (+1 more)
notebooks/: Nuclear Incidents - 1. Data preparation.ipynb  Nuclear Incidents - 1. Data processing.ipynb  Nuclear Incidents - 2. Topic modeling - Hierarchical visualization.ipynb  Nuclear Incidents - 2. Topic modeling - Title-level.ipynb  Nuclear Incidents - 3. Similarity - Paragraph-level.ipynb  Nuclear Incidents - 3. Similarity - Text-level.ipynb  Nuclear Incidents - Knowledge Graph Extraction.ipynb
notebooks/.ipynb_checkpoints/: Nuclear Incidents - Knowledge Graph Extraction-checkpoint.ipynb
scripts/: incidents.bat  jupyter.bat  labeling.bat  streamlit.bat
src/: EntityClassification.py  EntityExtraction.py  EntityVisualization.py  GraphExtraction.py  GraphUtils.py  GraphVisualization.py  TextPreprocessing.py  TextSimilarity.py
src/tmtools/: span.py  tfidf.py  topic.py
streamlit/: incidents_ui.py  labeling_ui.py
(+14 files in other folders)
