[tool.poetry]
name = "asn-incidents"
version = "0.1.1"
description = ""
authors = ["Jean-baptiste Aujogue <jb.aujogue@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
scipy = "^1.11.3"
pandas = "^1.5.3"
openpyxl = "^3.1.2"
dill = "^0.3.7"
scikit-learn = "^1.3.1"
spacy = "^3.6"
gensim = "^4.3.2"
networkx = "^3.1"
matplotlib = "^3.8.0"
altair = "^5.1.2"
seaborn = "^0.13.0"
termcolor = "2.3.0"
tqdm = "^4.66.1"
streamlit = "^1.27.2"
streamlit-agraph = "^0.0.45"
d3graph = "^2.4.16"
pyvis = "^0.3.2"
vega = "^4.0.0"
fr_dep_news_trf = {url = "https://github.com/explosion/spacy-models/releases/download/fr_dep_news_trf-3.6.1/fr_dep_news_trf-3.6.1.tar.gz"}

[tool.poetry.group.dev.dependencies]
notebook = "^7.0.5"
nltk = "^3.8.1"
en_core_web_trf = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.6.1/en_core_web_trf-3.6.1.tar.gz"}
ipywidgets = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
